--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,5 +1,5 @@
 .slider{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     overflow: hidden;
     position: relative;
@@ -284,9 +284,3 @@
      }
 }
 
-@media screen and (max-width:1024px){
-    .nextPrevArrows{
-        top:90%;
-        right:-11%;
-     }
-}
