--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body,html {
+    background-color: #121212;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+  }
